# style-unifier

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  STYLE.md  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  requirements-cuda.txt  requirements-dev.txt  requirements.txt
.claude/agents/: evaluator.md  implementer.md  researcher.md  reviewer.md  tester.md
docs/: roadmap.md  technical_design.md
